test/Sema/Inputs/enum_raw_representable_explicit_multi_file_2.swift

extension Foo: RawRepresentable {}

enum Bar: Int { case A }

// expected-error@+1{{redundant conformance of 'Bas' to protocol 'RawRepresentable'}}
extension Bas: RawRepresentable {}

